# boxt

./: Cargo.toml  README.md  foo.txt
src/: binds.rs  canvas.rs  config.rs  edit.rs  lib.rs  line.rs  main.rs  point.rs  rect.rs  text.rs  tui.rs  vec.rs
src/snapshots/: boxt__line__tests__draw_line_down_left.snap  boxt__line__tests__draw_line_down_left.snap.new  boxt__line__tests__draw_line_down_left_mirror.snap  boxt__line__tests__draw_line_down_right_mirror.snap  boxt__line__tests__draw_line_up_left.snap  boxt__line__tests__draw_line_up_left_mirror.snap  boxt__line__tests__draw_line_up_right.snap.new  boxt__tui__tests__delete.snap  boxt__tui__tests__delete_rect.snap  boxt__tui__tests__draw_line.snap  boxt__tui__tests__load.snap  boxt__tui__tests__move_rect.snap  boxt__tui__tests__render_empty.snap  boxt__tui__tests__save.snap  boxt__tui__tests__select_rect.snap  boxt__tui__tests__tui_cancel_rect.snap  boxt__tui__tests__tui_draw_line.snap  boxt__tui__tests__tui_draw_rect.snap  boxt__tui__tests__tui_draw_text.snap  boxt__tui__tests__tui_undo_redo-3.snap  boxt__tui__tests__tui_undo_redo-6.snap  boxt__tui__tests__tui_undo_redo-8.snap  boxt__tui__tests__tui_undo_redo.snap  clart__tui__tests__cancel_rect.snap  clart__tui__tests__draw_rect.snap  clart__tui__tests__render_empty.snap
tests/testdata/: simple.toml
