[package]
name = "clart"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
insta = { version = "1.39" }
insta-cmd = "0.6"

