[package]
name = "boxt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Box diagram TUI"
homepage = "https://codeberg.org/rrc/boxt"
repository = "https://codeberg.org/rrc/boxt"
keywords = ["tui", "ascii", "art", "box", "diagram"]
categories = ["graphics", "development-tools", "visualization", "multimedia::images"]


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
env_logger = "0.11"
log = "0.4"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.39" }
insta-cmd = "0.6"
tempfile = "3.10"
